--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -1,4 +1,4 @@
 # Introducción {#intro}
 
 Este trabajo utiliza el método de monitoreo de prensa para acometer la tarea de encontrar una representación adecuada que se aproxime a la situación de la violencia interpersonal en Venezuela. Tal tipo de metodología recoge los eventos y víctimas de violencia interpersonal, obtenidos a partir del seguimiento efectuado por los Observatorios de Prensa, contabilizando tan solo los hechos que tuvieron lugar en las 14 entidades monitoreadas.  Las categorías empleadas en la sistematización se corresponden con las propuestas en la Clasificación Internacional de Delitos con Fines Estadísticos (ICCS por sus siglas en inglés) [@UNODC2015] que permite la estructuración y organización de los datos atendiendo a categorías analíticas en lugar de jurídicas. 
-En concreto estudiamos y comparamos los móviles, distribución y evolución de la ocurrencia del delito interpersonal violento en las regiones del país partiendo de la conformación de una base estadística a partir de la cual se ha generado un conjunto de indicadores de violencia. El OVV ha sido pionero utilizando esta cambinacion de metodos en el pais y nuestros resultados demuestran que son modelos flexibles, expresivos y robustos frente a la variabilidad de las fuentes de información con políticas editoriales diversas y diferentes aproximaciones o criterios en el reporte de los sucesos. 
+En concreto estudiamos y comparamos los móviles, distribución y evolución de la ocurrencia del delito interpersonal violento en las regiones del país partiendo de la conformación de una base estadística a partir de la cual se ha generado un conjunto de indicadores de violencia. El OVV ha sido pionero utilizando esta cambinacion de métodos en el pais y nuestros resultados demuestran que son modelos flexibles, expresivos y robustos frente a la variabilidad de las fuentes de información con políticas editoriales diversas y diferentes aproximaciones o criterios en el reporte de los sucesos. 
