HI cuali primer parrafo

--- a/02-violencialetal.Rmd
+++ b/02-violencialetal.Rmd
@@ -2,7 +2,7 @@
 
 ## Homicidio intencional
 
-Para comprender mejor la acción delincuencial en Guárico, vale la pena recordar que buena parte de la violencia observada hoy en el estado, tiene su origen en la política de encarcelamiento masivo puesta en práctica por el gobierno nacional durante el bienio 2009-2010. El “punitivismo carcelario” y el “militarismo” en los operativos policiales y de seguridad ciudadana [@Avila2019], donde la población de presos paso de 30.000 a 50.000 [@Hanson2021] desbordando la capacidad instalada de los recintos, dio paso al hacinamiento, al florecimiento de economías ilícitas dentro de la cárcel y focos violentos con visos de para estatalismo carcelario. En este contexto, el Estado impulsa una serie de negociaciones “micro” con los líderes prisionales (PRAN) y prácticamente les “terceriza” la función de supervisores de los recintos [@Mayorca2016; @Bocaranda2016; @Coscojuela2016; @Antillano2016]. Estos acuerdos abrieron las compuertas de redes de acumulación predatoria extrema, primero con los mercados de privilegios y derechos dentro de las cárceles, y después con las economías de extorsión que, rápidamente, permearon hacia su entorno cercano.
+Entendiendo el homicidio intencional como la “muerte ilícita causada a una persona con la intención de causarle la muerte u ocasionarle lesiones graves” [@UNODC2015,19], no cabe duda de que este delito sigue siendo de los más graves que se cometen y son reportados por la prensa. Así puede observarse en la gráfica XX que este delito discriminado por edad y sexo nos muestra lo que ha sido una tendencia en el país y en Latinoamérica, y son las muertes de hombres jóvenes menores de 30 años, pero también puede notarse que durante el periodo en estudio fueron recogidos mayoritariamente por la prensa el homicidio al sexo femenino en edades entre 11 y 25 años, fundamentalmente el grupo entre adolescentes de 11 a 15 años. Y aunque con las menores proporciones también sucedió con octogenarias y menores de 1 año de edad. 
 
 ```{r victimasmilpiramide, results='hide',echo=FALSE,message=FALSE, warning=FALSE,cache=F}
 source("victimasmil_edadsexo_piramide.R", echo = F,local = knitr::knit_global())
