--- a/03-noletal.Rmd
+++ b/03-noletal.Rmd
@@ -35,7 +35,7 @@ De los delitos diferentes al homicidio intencional, en los más de 500 sucesos i
 source("victimasodel_sexo_piramide.R", echo = F,local = knitr::knit_global())
 ```
 
-Esos delitos diferentes de los homicidios discriminados por sexo, permiten apreciar de acuerdo con lo reportado por la prensa durante este semestre, que tal como lo mencionamos en la gráfica XX son las agresiones los delitos más cometidos y en similar proporción en personas del sexo masculino y femenino. Pero además, los hombres son más víctimas de otros delitos como robo y tentativa de homicidio, mientras que las mujeres lo son de violación sexual, robo y otras agresiones sexuales.
+Esos delitos diferentes de los homicidios discriminados por sexo, permiten apreciar de acuerdo con lo reportado por la prensa durante este semestre, que tal como lo mencionamos en la gráfica \@ref(fig:victimasodelsexopirgraf) son las agresiones los delitos más cometidos y en similar proporción en personas del sexo masculino y femenino. Pero además, los hombres son más víctimas de otros delitos como robo y tentativa de homicidio, mientras que las mujeres lo son de violación sexual, robo y otras agresiones sexuales.
 
 (ref:victimasodelsexoagr) Tipo de delito y acividad de las víctimas de otros delitos distintos a homicidio intencional.
 
@@ -48,6 +48,8 @@ plot(victimasexodelactiv_graf)
 De las víctimas de delitos distintos al homicidio, en el caso de los hombres son fundamentalmente trabajadores, y en menor proporción estudiantes. Son las mujeres estudiantes las más afectadas por este tipo de delitos y menor número de trabajadoras.
 
 ## Víctimas de agresión
+
+En los casos conocidos de víctimas por agresión, es notable que las mujeres son victimizadas principalmente por motivaciones basadas en género y otras causas; mientras que los hombres son víctimas debido a riñas, provecho ilícito y otras causas no especificadas. En ambos sexos, motivaciones como ajuste de cuentas, prejuicios o venganzas son numéricamente muy inferiores.
 
 ```{r victiagresexopiramide, results='hide',echo=FALSE,message=FALSE, warning=FALSE,cache=F}
 source("victimasagresiondel_sexo_piramide.R", echo = F,local = knitr::knit_global())
@@ -67,5 +69,5 @@ plot(grafico, pch = 19, type= "b")
 plot(victimasagresiondonde_grafico)
 ```
 
-
+De acuerdo con los roles socialmente desempeñados por ambos sexos, la gráfica \@ref(fig:victiagrsexdondepirgraf) muestra como las mujeres son víctimas de delitos diferentes de homicidio fundamentalmente en el hogar, mientras que los hombres están más expuestos a delitos en espacios abiertos o en la calle. Aunque el hogar y las prisiones o instituciones penales son lugares donde también los hombres son victimizados.
 
