--- a/book.bib
+++ b/book.bib
@@ -185,3 +185,15 @@ urldate = {2020-12-12},
 year = {2020}
 }
 
+@article{Galtung2016,
+author = {Galtung, Johan},
+doi = {ISSN 1697-6924},
+journal = {Cuadernos de estrategia},
+mendeley-groups = {OVV},
+number = {183},
+pages = {147--168},
+title = {{La violencia: cultural, estructural y directa}},
+url = {https://dialnet.unirioja.es/servlet/articulo?codigo=5832797},
+year = {2016}
+}
+
