nna final Tweaking

--- a/04-NNA.Rmd
+++ b/04-NNA.Rmd
@@ -1,6 +1,6 @@
 # Niñas, niños y adolescentes
 
-## Demografía y tipo de delito
+## Caracteríticas y tipo de delito
 
 La caracterización de los delitos cuando las víctimas son niños, niñas y adolescentes, permiten afirmar que los sucesos reportados en la prensa durante el primer semestre del año 2021, revelan más de 60 víctimas del sexo femenino, siendo el grupo entre 11 y 15 años el más afectado, seguido de niñas entre 6 y 10 años  y las adolescentes de 16 a 20 años. Las menores de 1 año son menos victimizadas pero también se observaron casos, al igual que en el sexo masculino. Aunque en el sexo masculino se mencionaron poco más de 30 casos, los más victimizados son los jóvenes de 16 a 20 años, seguidos de los niños entre 6 y 10 años y luego los menores con edades entre 11 y 15 años y 1 y 5 años respectivamente. 
 
