--- a/03-noletal.Rmd
+++ b/03-noletal.Rmd
@@ -2,12 +2,11 @@
 
 ## Otros delitos distintos a homicido intencional (HI)
 
-En casos de delitos diferentes al homicidio, entre los que se encuentran: tentativa de homicidio, secuestro, desaparición forzada, violación sexual, otras agresiones sexuales, robo, agresiones, extorsión, amenaza de muerte y amenaza de agresión, son las mujeres las más afectadas, sorprendentemente en los grupos etarios entre 6 y 15 años, además del grupo de 46 a 50 años. Entre los hombres, es el grupo de hombres entre 11 y 40 años quienes son víctimas de estos delitos.
+En casos de delitos diferentes al homicidio, entre los que se encuentran: tentativa de homicidio, secuestro, desaparición forzada, violación sexual, otras agresiones sexuales, robo, agresiones, extorsión, amenaza de muerte y amenaza de agresión, son las mujeres las más afectadas (gráfico \@ref(fig:victimasdelhisexoedadpir)), sorprendentemente en los grupos etarios entre 6 y 15 años, además del grupo de 46 a 50 años. Entre los hombres, es el grupo de hombres entre 11 y 40 años quienes son víctimas de estos delitos.
 
 ```{r victimasodelpiramide, results='hide',echo=FALSE,message=FALSE, warning=FALSE,cache=F}
 source("victimasodel_edadsexo_piramide.R", echo = F,local = knitr::knit_global())
 ```
-
 
 
 ```{r sucesosotrosdelbarras, results='hide',echo=FALSE,message=FALSE, warning=FALSE,cache=F}
@@ -19,33 +18,56 @@ source("sucesosotrosdel_barras.R", echo = F,local = knitr::knit_global())
 source("victimasexodel_actividad_piramide.R", echo = F,local = knitr::knit_global())
 ```
 
+(ref:victimasodeledadsexo) Número víctimas de otros delitos distintos a homicidio intencional discriminados por edad y sexo.
 
-(ref:victimasodeledadsexo) Número víctimas y sucesos de otros delitos distintos a homicidio intencional.
-
-```{r victimasodeledadsexopirgraf, echo=FALSE, fig.show="hold", out.width="50%", warning=FALSE,cache=F,fig.cap = '(ref:victimasodeledadsexo)'}
+```{r victimasodelsexoedadpir, echo=FALSE, out.width="90%",warning=FALSE,cache=F,fig.cap = '(ref:victimasdeledadsexo)'}
 par(mar = c(4, 4, 0.1, 0.1))
-plot(victimasodel_piramide, pch = 19, type= "b")
-plot(sucesosotrosdel_barras)
-
+knitr::include_graphics(c("images/victimasodel_piramide.png"))
+# par(mar = c(4, 4, 0.1, 0.1))
+# plot(a)
+# plot(sucesospol_barras)
 ```
 
 De los delitos diferentes al homicidio intencional, en los más de 500 sucesos informados por la prensa durante el semestre, son las agresiones graves y leves las más frecuentes (34%), seguidas del robo (27%). Son los delitos menos frecuentes las amenazas de agresión y las desapariciones forzadas.
+
+(ref:sucesosodeltipodelito) Número y proporción de sucesos asociados a otros delitos distintos de homicidio intencional discriminados según el tipo de delito.
+
+```{r sucesosodeltipodel, echo=FALSE, out.width="90%",warning=FALSE,cache=F,fig.cap = '(ref:sucesosodeltipodelito)'}
+par(mar = c(4, 4, 0.1, 0.1))
+knitr::include_graphics(c("images/sucesosotrosdel_barras.png"))
+# par(mar = c(4, 4, 0.1, 0.1))
+# plot(a)
+# plot(sucesospol_barras)
+```
+
 
 ```{r victimasexodelpiramide, results='hide',echo=FALSE,message=FALSE, warning=FALSE,cache=F}
 source("victimasodel_sexo_piramide.R", echo = F,local = knitr::knit_global())
 ```
 
-Esos delitos diferentes de los homicidios discriminados por sexo, permiten apreciar de acuerdo con lo reportado por la prensa durante este semestre, que tal como lo mencionamos en la gráfica \@ref(fig:victimasodelsexopirgraf) son las agresiones los delitos más cometidos y en similar proporción en personas del sexo masculino y femenino. Pero además, los hombres son más víctimas de otros delitos como robo y tentativa de homicidio, mientras que las mujeres lo son de violación sexual, robo y otras agresiones sexuales.
+Esos delitos diferentes de los homicidios discriminados por sexo, permiten apreciar de acuerdo con lo reportado por la prensa durante este semestre, que tal como lo mencionamos en la gráfica \@ref(fig:sucesosodeltipodel) son las agresiones los delitos más cometidos y en similar proporción en personas del sexo masculino y femenino. Pero además, los hombres son más víctimas de otros delitos como robo y tentativa de homicidio, mientras que las mujeres lo son de violación sexual, robo y otras agresiones sexuales.
 
-(ref:victimasodelsexoagr) Tipo de delito y acividad de las víctimas de otros delitos distintos a homicidio intencional.
+(ref:victimasodelsexotipodel) Número víctimas de otros delitos distintos a homicidio intencional discriminados según sexo y tipo de delito.
 
-```{r victimasodelsexopirgraf, echo=FALSE, fig.show="hold", out.width="50%", warning=FALSE,cache=F,fig.cap = '(ref:victimasodelsexoagr)'}
+```{r victimasodelsexotipodelpir, echo=FALSE, out.width="90%",warning=FALSE,cache=F,fig.cap = '(ref:victimasodelsexotipodel)'}
 par(mar = c(4, 4, 0.1, 0.1))
-plot(victimasexotrosdel_graf, pch = 19, type= "b")
-plot(victimasexodelactiv_graf)
+knitr::include_graphics(c("images/victimasexotrosdel_graf.png"))
+# par(mar = c(4, 4, 0.1, 0.1))
+# plot(a)
+# plot(sucesospol_barras)
 ```
 
 De las víctimas de delitos distintos al homicidio, en el caso de los hombres son fundamentalmente trabajadores, y en menor proporción estudiantes. Son las mujeres estudiantes las más afectadas por este tipo de delitos y menor número de trabajadoras.
+
+(ref:victimasodelsexoactiv) Número víctimas de otros delitos distintos a homicidio intencional discriminados según sexo y actividad a la que se dedica la víctima.
+
+```{r victimasodelsexoactivpir, echo=FALSE, out.width="90%",warning=FALSE,cache=F,fig.cap = '(ref:victimasodelsexoactiv)'}
+par(mar = c(4, 4, 0.1, 0.1))
+knitr::include_graphics(c("images/victimasexodelactiv_graf.png"))
+# par(mar = c(4, 4, 0.1, 0.1))
+# plot(a)
+# plot(sucesospol_barras)
+```
 
 ## Víctimas de agresión
 
