--- a/04-NNA.Rmd
+++ b/04-NNA.Rmd
@@ -12,15 +12,25 @@ source("victimasodelNNA_edadsexo_piramide.R", echo = F,local = knitr::knit_globa
 source("victimasdelNNA_sexotipodel_piramide.R", echo = F,local = knitr::knit_global())
 ```
 
+(ref:victimasdelNNAedadsexo) Número niñas, niños, adolescentes y jóvenes víctimas de delitos discriminados según sexo y edad.
 
-(ref:victinnaedadsexo) Demografía y tipo de delito en víctimas niñas, niños y adolescentes.
-
-```{r victinnaedadsexopirgraf, echo=FALSE, fig.show="hold", out.width="50%", warning=FALSE,cache=F,fig.cap = '(ref:victinnaedadsexo)'}
+```{r victimasdeledadsexopir, echo=FALSE, out.width="90%",warning=FALSE,cache=F,fig.cap = '(ref:victimasdelNNAedadsexo)'}
 par(mar = c(4, 4, 0.1, 0.1))
-plot(victimasodelNNA_piramide, pch = 19, type= "b")
-plot(victimasexodelNNA_graf)
+knitr::include_graphics(c("images/victimasodelNNA_piramide.png"))
+# par(mar = c(4, 4, 0.1, 0.1))
+# plot(a)
+# plot(sucesospol_barras)
 ```
 
+(ref:victimassexodelNNA) Número niñas, niños, adolescentes y jóvenes víctimas de delitos discriminados según sexo y tipo de delito.
+
+```{r victimasexodelpir, echo=FALSE, out.width="90%",warning=FALSE,cache=F,fig.cap = '(ref:victimassexodelNNA)'}
+par(mar = c(4, 4, 0.1, 0.1))
+knitr::include_graphics(c("images/victimasexodelNNA_graf.png"))
+# par(mar = c(4, 4, 0.1, 0.1))
+# plot(a)
+# plot(sucesospol_barras)
+```
 
 ## Los victimarios
 
@@ -35,15 +45,26 @@ source("victimasdelNNA_sexovictimariocon_piramide.R", echo = F,local = knitr::kn
 source("victimasdelNNA_sexovictimariorel_piramide.R", echo = F,local = knitr::knit_global())
 ```
 
+(ref:victimassexodelNNAvictimariorel) Número niñas, niños, adolescentes y jóvenes víctimas de delitos discriminados según sexo y tipo de victimario.
 
-
-(ref:victinnasexovictimario) Relación y tipo de victimario en niñas, niños y adolescentes víctima de delito.
-
-```{r victinnasexovictimarioconpirgraf, echo=FALSE, fig.show="hold", out.width="50%", warning=FALSE,cache=F,fig.cap = '(ref:victinnasexovictimario)'}
+```{r victimasexodelvictimariorelpir, echo=FALSE, out.width="90%",warning=FALSE,cache=F,fig.cap = '(ref:victimassexodelNNAvictimariorel)'}
 par(mar = c(4, 4, 0.1, 0.1))
-plot(victimasexodelvictimariorelNNA_graf)
-plot(victimasexodelvictimarioconNNA_graf, pch = 19, type= "b")
-
+knitr::include_graphics(c("images/victimasexodelvictimariorelNNA_graf.png"))
+# par(mar = c(4, 4, 0.1, 0.1))
+# plot(a)
+# plot(sucesospol_barras)
 ```
 
-Si profundizamos en las características relacionales de las víctimas con sus mayores victimarios que son personas conocidas, nos encontramos con que los datos reportados y visualizados en la gráfica \@ref(fig:victinnasexovictimarioconpirgraf), indican que en ambos sexos son los parientes consanguíneos quienes cometen los delitos contra los niños, niñas y adolescentes. La diversidad de victimarios está más presente en el caso del sexo femenino, quienes además son víctimas de otro miembro del hogar, otro agresor conocido, vecinos y pareja o expareja. Los del sexo masculino además fueron victimizados por otro agresor conocido, un vecino, y pocos casos por otro miembro del hogar o amigo.
+Si profundizamos en las características relacionales de las víctimas con sus mayores victimarios que son personas conocidas, nos encontramos con que los datos reportados y visualizados en la gráfica \@ref(fig:victimasexodelvictimarioconpir), indican que en ambos sexos son los parientes consanguíneos quienes cometen los delitos contra los niños, niñas y adolescentes. La diversidad de victimarios está más presente en el caso del sexo femenino, quienes además son víctimas de otro miembro del hogar, otro agresor conocido, vecinos y pareja o expareja. Los del sexo masculino además fueron victimizados por otro agresor conocido, un vecino, y pocos casos por otro miembro del hogar o amigo.
+
+(ref:victimassexodelNNAvictimariocon) Número niñas, niños, adolescentes y jóvenes víctimas de delitos discriminados según sexo y relacion  con el victimario.
+
+```{r victimasexodelvictimarioconpir, echo=FALSE, out.width="90%",warning=FALSE,cache=F,fig.cap = '(ref:victimassexodelNNAvictimariocon)'}
+par(mar = c(4, 4, 0.1, 0.1))
+knitr::include_graphics(c("images/victimasexodelvictimarioconNNA_graf.png"))
+# par(mar = c(4, 4, 0.1, 0.1))
+# plot(a)
+# plot(sucesospol_barras)
+```
+
+
