updating word toc

--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -1,4 +1,4 @@
-# Presentación {#intro}
+# Lo observado 
 
 Nos complace presentarles el primer número del Boletín del Observatorio de Prensa del Observatorio Venezolano de Violencia (OVV). Este Boletín es el esfuerzo del trabajo de recolección, sistematización, análisis e interpretación de las noticias de sucesos violentos reportados en la prensa escrita y digital tanto estadal como nacional, por los 15 equipos de trabajo que hacen parte de las sedes de los Observatorios Regionales presentes en los estados: Amazonas Aragua, Bolívar, Carabobo Falcón, Guárico, Lara, Mérida, Monagas, Nueva Esparta, Región Capital, Sucre, Táchira, Trujillo y Zulia.
 
